fix cutoff

--- a/resources/css/codebase.css
+++ b/resources/css/codebase.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: "Helvetica";
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -24,7 +24,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Muli", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Helvetica";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
